[package]
name = "gmsv_reqwest"
version = "1.1.3"
authors = ["William Venner <william@venner.io>"]
edition = "2018"
publish = false

[lib]
name = "gmsv_reqwest"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
lto = "thin"

[dependencies]
gmod = { version = "10.2.2", default-features = false }
reqwest = { version = "0.11.8", default-features = false, features = ["rustls-tls-native-roots"] }
tokio = { version = "1.15.0", features = ["rt", "macros"] }
crossbeam = "0.8.1"
thiserror = "1.0.30"
magic_static = "3.0.1"
singlyton = "4.1.1"
