[package]
name = "gmsv_reqwest"
version = "1.1.5"
authors = ["William Venner <william@venner.io>"]
edition = "2018"
publish = false

[lib]
name = "gmsv_reqwest"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
lto = "thin"

[dependencies]
gmod = { version = "11.0", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-native-roots"] }
tokio = { version = "1.15", features = ["rt", "macros"] }
crossbeam = "0.8"
thiserror = "1.0"
magic_static = "3.0"
singlyton = "4.1"
