[package]
name = "gmsv_reqwest"
version = "3.0.2"
authors = ["William Venner <william@venner.io>"]
edition = "2018"
publish = false

[lib]
name = "gmsv_reqwest"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
lto = "thin"
strip = true

[dependencies]
gmod = { version = "15.0", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-native-roots", "blocking"] }
tokio = { version = "1.15", features = ["rt", "macros"] }
crossbeam = { version = "0.8", default-features = false, features = ["std", "crossbeam-channel"] }
thiserror = "1.0"
magic_static = "3.0"
singlyton = "4.1"
bytes = "1"
